--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <a href="https://github.com/Mafer-Rodriguez" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/mafer-rodriguez-macias/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
         <a href="https://www.instagram.com/invites/contact/?i=6w4tmkyhrx1r&utm_content=1d2rl09" target="_blank" rel="noopener noreferrer">
